--- a/Begra.html
+++ b/Begra.html
@@ -1,6 +1,7 @@
 <html> 
 <body>
     <style>
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         div.ex1 {
             width: auto;
             padding: 20px;
