--- a/Begra.html
+++ b/Begra.html
@@ -1,7 +1,7 @@
 <html> 
 <body>
     <style>
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        
         div.ex1 {
             width: auto;
             padding: 20px;
@@ -90,8 +90,8 @@
         <h2 style="text-align: center; font-size: 35Px;">Designed for Begra company</h2>
               <p style="text-align: left;font-size: 22Px; padding-left: 45px; padding-right: 45px"><b>Client needs:</b></P>
               <p style="text-align: left; font-size: 20Px; padding-left: 55px; padding-right: 45px"> Calssic logomotion that show prestige of family and repersent their work.</p>
-              <p style="text-align: left; padding-left: 45px; padding-right: 45px"><b>My strategy:</b></P>
-              <p style="text-align: left; padding-left: 55px; padding-right: 45px">1. I used a Industrial Equipment tool in shape to show the file of activity.<br>2. The shape is designed with a light color to attract the audiences attention.<br>3. Also I used a cllassic font to show the calssic style.<br>4. I used a simple animation design so that audiences could read the name quickly.</p>
+              <p style="text-align: left; font-size: 22Px; padding-left: 45px; padding-right: 45px"><b>My strategy:</b></P>
+              <p style="text-align: left; font-size: 20Px; padding-left: 55px; padding-right: 45px">1. I used a Industrial Equipment tool in shape to show the file of activity.<br>2. The shape is designed with a light color to attract the audiences attention.<br>3. Also I used a cllassic font to show the calssic style.<br>4. I used a simple animation design so that audiences could read the name quickly.</p>
               <p style="text-align: left; font-size: 20Px; padding-left: 45px; padding-right: 45px">Intro animation Full HD Resolution/30 fps.</p>
               <p style="text-align: left; font-size: 20Px; padding-left: 45px; padding-right: 45px">Designed with Adobe After effects & Illustrator.</p>
               <p style="text-align: left; font-size: 20Px; padding-left: 45px; padding-right: 45px">Feed back: </p>
