--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							<h2>Film plug Logomotion</h2>
 							    
 							<ul class="actions stacked">
-								<button style="width: min-content; align-items: center;" onclick="two()">See Details</button>
+								<button style="width: min-content; align-self: auto;" onclick="two()">See Details</button>
 								<script>
 									function two() {
 										window.open("Filmplug.html")
