--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							<h2>Film plug Logomotion</h2>
 							    
 							<ul class="actions stacked">
-								<button style="width: min-content; align-self: auto;" onclick="two()">See Details</button>
+								<button style="width: min-content; align-self: center;" onclick="two()">See Details</button>
 								<script>
 									function two() {
 										window.open("Filmplug.html")
@@ -143,7 +143,7 @@
 							<h2>Apollo Logomotion</h2>
 							
 							<ul class="actions stacked">
-							<button style="width: min-content;" onclick="three()">See Details</button>
+							<button style="width: min-content; align-self: center" onclick="three()">See Details</button>
 								<script>
 									function three() {
 										window.open("apollo.html")
@@ -162,7 +162,7 @@
 					    <div class="content">
 						    <h2>Belkines Logomotion</h2>
 						    <ul class="actions stacked">
-								<button style="width: min-content;" onclick="four()">See Details</button>
+								<button style="width: min-content; align-self: center" onclick="four()">See Details</button>
 								<script>
 									function four() {
 										window.open("Belkines.html")
@@ -181,7 +181,7 @@
 					<div class="content">
 						<h2>Apex Logomotion</h2>
 						<ul class="actions stacked">
-							<button style="width: min-content;" onclick="five()">See Details</button>
+							<button style="width: min-content; align-self: center" onclick="five()">See Details</button>
 								<script>
 									function five() {
 										window.open("Apex.html")
@@ -200,7 +200,7 @@
 					<div class="content">
 						<h2>Candy Logomotion</h2>
 						<ul class="actions stacked">
-							<button style="width: min-content;" onclick="six()">See Details</button>
+							<button style="width: min-content; align-self: center" onclick="six()">See Details</button>
 								<script>
 									function six() {
 										window.open("candy.html")
@@ -218,7 +218,7 @@
 					<div class="content">
 						<h2>Nemesis Logomotion</h2>
 						<ul class="actions stacked">
-							<button style="width: min-content;" onclick="seven()">See Details</button>
+							<button style="width: min-content; align-self: center" onclick="seven()">See Details</button>
 								<script>
 									function seven() {
 										window.open("Nemesis.html")
