--- a/apollo.html
+++ b/apollo.html
@@ -80,17 +80,17 @@
             }
             </script>    
      <div class="ex1">
-     <h1 style="text-align: center; font-size: 50px;">Apollo Logo Motion</h1></div> 
+     <h1 style="text-align: center; font-size: 50px;">mightyeye Logo Motion</h1></div> 
       
     
     <div class="image">
-        <img src="images/APOLLO.gif" alt=""></div>
+        <img src="images/mightyeye.gif" alt=""></div>
         <div>
-        <h2 style="text-align: center; font-size: 35Px;">Designed for Apollo company</h2>
+        <h2 style="text-align: center; font-size: 35Px;">Designed for mightyeye company</h2>
               <p style="text-align: left;font-size: 22Px; padding-left: 45px; padding-right: 45px"><b>Client needs:</b></P>
-              <p style="text-align: left; font-size: 20Px; padding-left: 55px; padding-right: 45px">A modern style font that show new style and crative.</p>
+              <p style="text-align: left; font-size: 20Px; padding-left: 55px; padding-right: 45px">A minimal logo motion.</p>
               <p style="text-align: left;font-size: 22Px; padding-left: 45px; padding-right: 45px"><b>My strategy:</b></P>
-              <p style="text-align: left; font-size: 20Px; padding-left: 55px; padding-right: 45px">1. I design font, it was little difficult to create a different typography that  fit the brand and feel freshand healthy. I chose this font and with a little change it become the typography i wanted. the skaletal parts have changed.<br>2. I used a simple animation design to show the gentility and prestaige.</p>
+              <p style="text-align: left; font-size: 20Px; padding-left: 55px; padding-right: 45px">1. I redesign logo then I animated this.<br>2. I used a simple animation design to show the minimal Logomotion.</p>
               <p style="text-align: left; font-size: 20Px; padding-left: 45px; padding-right: 45px">Intro animation Full HD Resolution/30 fps.</p>
               <p style="text-align: left; font-size: 20Px; padding-left: 45px; padding-right: 45px">Designed with Adobe After effects & Illustrator.</p>
               <p style="text-align: left; font-size: 20Px; padding-left: 45px; padding-right: 45px">Feed back: </p>
