--- a/mightyeye.html
+++ b/mightyeye.html
@@ -80,13 +80,13 @@
             }
             </script>    
      <div class="ex1">
-     <h1 style="text-align: center; font-size: 50px;">mightyeye Logo Motion</h1></div> 
+     <h1 style="text-align: center; font-size: 50px;">Mightyeye Logo Motion</h1></div> 
       
     
     <div class="image">
         <img src="images/mightyeye.gif" alt=""></div>
         <div>
-        <h2 style="text-align: center; font-size: 35Px;">Designed for mightyeye company</h2>
+        <h2 style="text-align: center; font-size: 35Px;">Designed for Mightyeye company</h2>
               <p style="text-align: left;font-size: 22Px; padding-left: 45px; padding-right: 45px"><b>Client needs:</b></P>
               <p style="text-align: left; font-size: 20Px; padding-left: 55px; padding-right: 45px">A minimal logo motion.</p>
               <p style="text-align: left;font-size: 22Px; padding-left: 45px; padding-right: 45px"><b>My strategy:</b></P>
